--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,3 +11,17 @@ black
 astunparse
 GitPython
 pygments
+networkx
+torch
+# https://stackoverflow.com/questions/65860764/pytorch-torch-sparse-installation-without-cuda
+torch-scatter -f https://pytorch-geometric.com/whl/torch-1.7.0+cpu.html
+torch-sparse -f https://pytorch-geometric.com/whl/torch-1.7.0+cpu.html
+torch-cluster -f https://pytorch-geometric.com/whl/torch-1.7.0+cpu.html
+torch-spline-conv -f https://pytorch-geometric.com/whl/torch-1.7.0+cpu.html
+torch_geometric
+tensorboard
+matplotlib
+pygraphviz
+python_graphs
+deepsnap
+orca
