--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install pip==22.0.4
         pip install -r requirements-dev.txt
+        pip install -r requirements-torch.txt
         pip install -e .
     - name: Test with pytest
       run: |
