--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pip==22.0.4
+        sudo apt-get install graphviz graphviz-dev
         pip install -r requirements-dev.txt
         pip install -r requirements-torch.txt
         pip install -e .
