--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         python-version: [3.9]
 
     steps:
@@ -16,17 +16,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - if: ${{ matrix.os }} == "macos-latest"]
-      name: Install graphviz (macos)
-      run: |
-          brew install graphviz
-    - if: ${{ matrix.os }} == "ubuntu-latest"
-      name: Install graphviz (macos)
-      run: |
-          sudo apt-get install graphviz graphviz-dev
     - name: Install dependencies 
       run: |
         python -m pip install pip==22.0.4
+        sudo apt-get install graphviz graphviz-dev
         pip install -r requirements-dev.txt
         pip install -r requirements-torch.txt
         pip install -e .
