--- a/codescholar/apps/app_bench.json
+++ b/codescholar/apps/app_bench.json
@@ -1,10 +1,5 @@
 {
-    "pandas": [
-        "pd.concat",
-        "df.groupby"
-    ],
     "numpy": [
-        "np.mean",
-        "np.dot"
+        "np.mean"
     ]
 }
